<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hunters And Zombies</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">HUNTERS\nAND\nZOMBIES</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="shop_inventory">Shop!</string>
    <string name="duel">Duel!</string>
    <string name="score">Score!</string>
    <string name="title_activity_score">Score</string>
    <string name="title_activity_duel">Duel</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="duel_label">Duel</string>
    <string name="title_activity_duel_user">DuelUserActivity</string>
    <string name="woodenSword">Wooden Sword</string>
    <string name="weapons">Choose a weapon to initiate the duel</string>
    <string name="initiateDuel">Initiate Duel!</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="item0">Wooden Sword</string>
    <string name="item1">Baseball Bat</string>
    <string name="item2">Golf Club</string>
    <string name="item3">Mace</string>
    <string name="item4">Flail</string>
    <string name="item5">Crowbar</string>
    <string name="price1">100</string>
    <string name="price2">200</string>
    <string name="price3">300</string>
    <string name="price4">400</string>
    <string name="price5">500</string>
    <string name="buy">Buy</string>
    <string name="inventoryToDashbtn">Return to Dashboard</string>
    <string name="resetLabel"></string>
    <string name="moneyLeftLabel">Your Cash:\u00A0</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="testParse">Test Parse!</string>
    <string name="items">You own:</string>
    <string name="title_activity_accept_duel">AcceptDuel</string>
   	<string name="items">You own:</string>
	<string name="lead">Leaderboard</string>

</resources>