<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Dashboard" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
<LinearLayout
 android:id="@+id/buttonBar"
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:layout_alignParentBottom="true"
 style="@android:style/ButtonBar"
android:gravity="center"
 >
    <Button android:id="@+id/scoreButton" android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:layout_weight="1"
        android:text="@string/score" />

    <Button android:id="@+id/duelButton" android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:layout_weight="1"
        android:text="@string/duel" />
    <Button android:id="@+id/inventoryButton" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		android:text="@string/shop_inventory" />
</LinearLayout>

</RelativeLayout>